<resources>
    <string name="app_name">Shopooz SOS</string>
    <string name="title_activity_main">SmartShoppr</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="search_hint">type to search</string>
    <string name="sign_up">do not have account?</string>
    <string name="sign_login">only for existing customer</string>
    <string name="no_internet_connection">check internet connection</string>

    <!--action bar items tittle-->
    <string name="action_search">Serach</string>
    <string name="action_refersh">Refresh</string>
    <string name="action_share">Share</string>
    <string name="action_bookmark">Bookmark</string>
    <string name="action_info">Info</string>
    <string name="action_coupon">Coupon</string>
    <string name="action_cleardata">Clear Data</string>
    <string name="action_notification">Notififcation on/off</string>
    <string name="action_rate_app">Rate This App</string>

    <!--add titlle for top left drawer item-->
    <string name="home">Home</string>
    <string name="login">Login</string>
    <string name="forgotpassword">Forgot Password</string>
    <string name="all_categories">All Categories</string>
    <string name="all_small_lists">All Small Lists</string>
    <string name="country">Country</string>
    <string name="language">Language</string>
    <string name="sync">Sync</string>
    <string name="share">Share</string>
    <string name="faqs">FAQs</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_us">About Us</string>
    <string name="terms_and_conditions">Terms and Conditions</string>

    <!--text for text view-->
    <string name="expand_categories">see all</string>
    <string name="categories_top_store">Top Store</string>
    <string name="categories_deal_of_the_day">Deal Of The Day</string>
    <string name="categories_mens_fashion">Men\'s Fashion</string>
    <string name="categories_womens_fashion">Top Store</string>
    <string name="categories_Shoes">Top Store</string>
    <string name="categories_gift_flowers">Gift &amp; Flowers</string>
    <string name="categories_beauty_accessories">Beauty &amp; Accessories</string>
    <string name="categories_baby_kids">Baby &amp; Kids</string>
    <string name="categories_mobile_dth_datacard">Mobile, Dth &amp; Datacard</string>
    <string name="categories_home_kitchen">Home &amp; Kitchen</string>
    <string name="categories_books">Books</string>
    <string name="title_activity_signup">Signup</string>
    <string name="LogOut">Log Out</string>

    <string name="copy_access_token_to_clipboard">Copy Access Token to Clipboard</string>
    <string name="clear_access_token">Clear Access Token</string>
    <string name="user_cancels_message">User cancels login</string>
    <string name="login_error_message">Error occured during login: %s</string>
    <string name="custom_login_text">I want to sign in using my Uber app.</string>
    <string name="authorization_code_message">Received an authorization code:\n %s</string>
    <string name="greeting">Hello %s!</string>
    <string name="smsString">Save emergency contact to send sms.\n\n Also keep turn on SOS (Top-Right Corner) to enable sending sms via pressing power button.(press power button 3 times or more than 3 times continuously within 1.5 second ) </string>

    <string name="uber_cab_booking_error">"Sorry, There was some problem. \nPlease try later"</string>
    <string name="ola_text1"> If you have balance in your Ola money,it will be deducted from there.if not,you will have to pay cash to the driver. </string>
    <string name="ola_text2"> If the balance in your Ola Money is nit sufficient,the remaining amount has to be paid in cash. </string>
</resources>
