<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh"
        android:title="@string/action_refersh"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_bookmark"
        android:icon="@drawable/bookmark"
        android:title="@string/action_bookmark"
        app:showAsAction="always" />
  <!--  <item
        android:id="@+id/action_coupon"
        android:icon="@drawable/coupon"
        android:title="@string/action_coupon"
        app:showAsAction="always" />-->
    <item
        android:id="@+id/action_info"
        android:icon="@drawable/information"
        android:title="@string/action_info"
        app:showAsAction="always" />
</menu>
