<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="always"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:title="Search"/>
    <item
        android:title="@string/action_cleardata"
        android:icon="@drawable/ic_wishlist"
        android:id="@+id/action_cleardata"
        app:showAsAction="never" />
    <item
        android:title="@string/action_notification"
        android:icon="@drawable/ic_wishlist"
        android:id="@+id/action_notification"
        app:showAsAction="never" />
    <item
        android:title="@string/action_rate_app"
        android:icon="@drawable/ic_wishlist"
        android:id="@+id/action_rate_app"
        app:showAsAction="never" />


</menu>
